# app-sb-comparison-tool

./: .stonebranch-tool-settings.json  CHANGELOG.md  README.md  RECONCILIATION_PLAN.md  pyproject.toml  run_compare_example.cmd  run_compare_your_repo.cmd  run_terminal_ui.cmd
0/: README.md  dependency-graph.dot  dependency-graph.mmd  edges.csv  graph.json  metrics.csv  metrics.json  objects.csv  pack-manifest.json  report.md
docs/: ANALYSIS_PACKS.md  COMPARISON_MODEL.md  GRAPH_SKELETON_AND_SEMANTIC_CORE_PROPOSAL.md  GRAPH_SKELETON_IMPLEMENTATION_PLAN.md  HARDENING_v0.3.3.md  IMPLEMENTATION_PLAN.md  METRICS.md  QA_BASELINE.md  REAL_REPOSITORY_DRY_RUN.md  TERMINAL_UI.md  mapping-explained.md  mapping-theory.md  offline-startup-fix-prompt.md  performance-scaling-plan.md  skeleton-example.json
example/: graph-data.js  index.html
examples/: alias.json  mapping.json
fix_result/: README.md  task-01-done-fold-asymmetry.md  task-02-alias-id-collision.md  task-03-uc-edge-condition-fidelity.md  task-04-sb-alias-plumbing.md  task-05-external-ref-id-format.md  task-06-monitor-target-ambiguity.md  task-07-test-suite-and-goldens.md  task-08-alias-coverage-diagnostics.md  task-09-minor-spec-conformance.md  task-10-perf-viewer-runtime.md  task-11-perf-compare-pipeline.md
prompts/: 01-expression-core-and-skeleton-model.md  03-autosys-skeleton-builder.md  06-alias-table.md  07-skeleton-comparison-engine.md  08-viewer-trigger-support.md  09-performance-pass.md  10-integration-cli-tests-docs.md  IMPLEMENTATION_PLAN.md
stonebranch_graph/: alias.py  artifacts.py  cli.py  compare.py  compare_csv_exports.py  compare_diagnostics.py  compare_engine.py  compare_export.py  compare_indexes.py  compare_keys.py  compare_matching.py  compare_overlay.py  compare_payloads.py  compare_remediation.py  compare_report.py  config.py  tui.py  (+28 more)
(+150 files in other folders)
