[project]
name = "stonebranch-dependency-tool"
version = "0.3.2"
description = "Build and compare dependency graphs from Stonebranch JSON exports and AutoSys JIL files."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
stonebranch-graph = "stonebranch_graph.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
