[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stonebranch-dependency-tool"
version = "0.5.5"
description = "Build and compare dependency graphs from Stonebranch JSON exports and AutoSys JIL files."
readme = "README.md"
license = { text = "MIT" }
keywords = ["stonebranch", "autosys", "jil", "dependency-graph", "migration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
stonebranch-graph = "stonebranch_graph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["stonebranch_graph*"]

[tool.setuptools.package-data]
stonebranch_graph = ["assets/*.js", "assets/*.LICENSE"]
